# ENPM661_Project3

./: README.md
src/diff_bot/: CMakeLists.txt  package.xml
src/diff_bot/config/: diffbot_controllers.yaml
src/diff_bot/launch/: gazebo.launch.py
src/diff_bot/models/project3/: model.sdf
src/diff_bot/models/project3/meshes/: map-project3-phase2.STL
src/diff_bot/scripts/: map.py  nav.py
src/diff_bot/urdf/: wheelchair_robot.urdf.xacro
src/diff_bot/worlds/: empty.world
