<?xml version="1.0"?>
<package format="3">
  <name>diff_bot</name>
  <version>0.0.1</version>
  <description>Custom wheelchair diff-drive robot with Gazebo world and A* navigation</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pynput</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>